# fakesnake

./: .gitignore  Pipfile  README.md  pytest.ini  setup.cfg  setup.py  tox.ini
assets/: fakesnake_db_demo.cast  fakesnake_demo.cast  fakesnake_gen_demo.cast
docker/: Dockerfile
docker_environments/: docker-compose.yml
docker_environments/windows/: Dockerfile
fakesnake/: __init__.py  creation.py  handler.py  main.py  setting.py
fakesnake/core/: __init__.py  creation.py  database.py
fakesnake/utils/: __init__.py  creation.py  database.py  environment.py  util.py  utils.py
tests/: creation_test.py  describe_table_handler_test.py  handler_test.py  insert_handler_test.py  table_handler_test.py  tables_handler_test.py
