[metadata]
name = fakesnake
version = 0.0.7
description = generate fake data
author = Vincent Liu
author_email = vincentliu362@gmail.com
url = https://github.com/Vin-Cento/fakesnake

[options]
packages = find:
install_requires =
    click
    faker
    geopy
    shapely
    numpy
    python-dotenv

[options.packages.find]
exclude =
    test*
    testing*

[options.entry_points]
console_scripts =
    fakes=fakesnake.main:main
